added acceptRide, startRide, endRide, payment options

--- a/UberBackend/src/main/resources/application.properties
+++ b/UberBackend/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=UberBackend
-spring.datasource.url=jdbc:postgresql://localhost:5432/Uber+Backend?useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/uber+backend?useSSL=false
 spring.datasource.username=guptem
 spring.datasource.password=password
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
+
 
