--- a/UberBackend/src/main/resources/application.properties
+++ b/UberBackend/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #smtp config:
-spring.mail.username=malhargupte66@gmail.com
-spring.mail.password=bhyn dqwe nkff ygbk
+spring.mail.username=
+spring.mail.password=
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
